Fix scrollbar issues

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -15,12 +15,13 @@
 }
 
 .desktop {
+  --desktop-padding: 1rem;
   --window-offset: 2rem;
   display: grid;
   flex-grow: 1;
   align-items: start;
   overflow: hidden;
-  padding: 1rem;
+  padding: var(--desktop-padding);
   grid-area: 2 / 1;
   gap: 1rem;
   grid-template-columns: 1fr 1fr;
@@ -36,10 +37,14 @@
   display: flex;
   flex-direction: column;
   min-height: 0;
-  max-height: 100%;
   gap: 1rem;
 
   @media screen and (width >= 1000px) {
+    max-height: min(
+      100%,
+      calc(100dvh - var(--window-offset) - (var(--desktop-padding) * 2))
+    );
+
     &:first-child {
       padding-block-end: var(--window-offset);
     }
